syntax = "proto2";

import "TSDArchives_sos.proto";
import "TSPMessages.proto";
import "TSSArchives_sos.proto";
import "TSWPArchives.proto";
package TSWP;

message SpecSetCharacterStyleArchive {
  optional .TSP.Reference character_style = 1;
  required bool unset = 2;
}

message SpecSetColumnsArchive {
  optional .TSWP.ColumnsArchive columns = 1;
  required bool unset = 2;
}

message SpecSetFontFeaturesArchive {
  repeated .TSWP.FontFeatureArchive font_features = 1;
  optional bool font_features_undefined = 2;
  required bool unset = 3;
}

message SpecSetLineSpacingArchive {
  optional .TSWP.LineSpacingArchive line_spacing = 1;
  required bool unset = 2;
}

message SpecSetListStyleArchive {
  optional .TSP.Reference list_style = 1;
  required bool unset = 2;
}

message SpecSetListStyleBoolArrayArchive {
  repeated bool list_style_bool_array = 1;
  optional bool list_style_bool_array_undefined = 2;
  required bool unset = 3;
}

message SpecSetListStyleFloatArrayArchive {
  repeated float list_style_float_array = 1;
  optional bool list_style_float_array_undefined = 2;
  required bool unset = 3;
}

message SpecSetListStyleImageDataArrayArchive {
  repeated .TSWP.ListStyleArchive.LabelImage list_style_image_data_array = 1;
  optional bool list_style_image_data_array_undefined = 2;
  required bool unset = 3;
}

message SpecSetListStyleListLabelGeometryArrayArchive {
  repeated .TSWP.ListStyleArchive.LabelGeometry list_style_list_label_geometry_array = 1;
  optional bool list_style_list_label_geometry_array_undefined = 2;
  required bool unset = 3;
}

message SpecSetListStyleListLabelTypeArrayArchive {
  repeated .TSWP.ListStyleArchive.LabelType list_style_list_label_type_array = 1;
  optional bool list_style_list_label_type_array_undefined = 2;
  required bool unset = 3;
}

message SpecSetListStyleListNumberTypeArrayArchive {
  repeated .TSWP.ListStyleArchive.NumberType list_style_list_number_type_array = 1;
  optional bool list_style_list_number_type_array_undefined = 2;
  required bool unset = 3;
}

message SpecSetListStyleStringArrayArchive {
  repeated string list_style_string_array = 1;
  optional bool list_style_string_array_undefined = 2;
  required bool unset = 3;
}

message SpecSetPaddingArchive {
  optional .TSWP.PaddingArchive padding = 1;
  required bool unset = 2;
}

message SpecSetParagraphStyleArchive {
  optional .TSP.Reference paragraph_style = 1;
  required bool unset = 2;
}

message SpecSetRuleOffsetArchive {
  optional .TSP.Point rule_offset = 1;
  required bool unset = 2;
}

message SpecSetTabsArchive {
  optional .TSWP.TabsArchive tabs = 1;
  required bool unset = 2;
}

message SpecCharacterStyleArchive {
  optional .TSWP.SpecSetCharacterStyleArchive spec_set_character_style = 1;
}

message SpecColumnsArchive {
  optional .TSWP.SpecSetColumnsArchive spec_set_columns = 1;
}

message SpecFontFeaturesArchive {
  optional .TSWP.SpecSetFontFeaturesArchive spec_set_font_features = 1;
}

message SpecLineSpacingArchive {
  optional .TSWP.SpecSetLineSpacingArchive spec_set_line_spacing = 1;
}

message SpecListStyleArchive {
  optional .TSWP.SpecSetListStyleArchive spec_set_list_style = 1;
}

message SpecListStyleBoolArrayArchive {
  optional .TSWP.SpecSetListStyleBoolArrayArchive spec_set_list_style_bool_array = 1;
}

message SpecListStyleFloatArrayArchive {
  optional .TSWP.SpecSetListStyleFloatArrayArchive spec_set_list_style_float_array = 1;
}

message SpecListStyleImageDataArrayArchive {
  optional .TSWP.SpecSetListStyleImageDataArrayArchive spec_set_list_style_image_data_array = 1;
}

message SpecListStyleListLabelGeometryArrayArchive {
  optional .TSWP.SpecSetListStyleListLabelGeometryArrayArchive spec_set_list_style_list_label_geometry_array = 1;
}

message SpecListStyleListLabelTypeArrayArchive {
  optional .TSWP.SpecSetListStyleListLabelTypeArrayArchive spec_set_list_style_list_label_type_array = 1;
}

message SpecListStyleListNumberTypeArrayArchive {
  optional .TSWP.SpecSetListStyleListNumberTypeArrayArchive spec_set_list_style_list_number_type_array = 1;
}

message SpecListStyleStringArrayArchive {
  optional .TSWP.SpecSetListStyleStringArrayArchive spec_set_list_style_string_array = 1;
}

message SpecPaddingArchive {
  optional .TSWP.SpecSetPaddingArchive spec_set_padding = 1;
}

message SpecParagraphStyleArchive {
  optional .TSWP.SpecSetParagraphStyleArchive spec_set_paragraph_style = 1;
}

message SpecRuleOffsetArchive {
  optional .TSWP.SpecSetRuleOffsetArchive spec_set_rule_offset = 1;
}

message SpecTabsArchive {
  optional .TSWP.SpecSetTabsArchive spec_set_tabs = 1;
}

message CharacterStylePropertyChangeSetArchive {
  optional .TSS.SpecDoubleArchive baseline_shift = 1;
  optional bool baseline_shift_undefined = 2;
  optional .TSS.SpecIntegerArchive capitalization = 3;
  optional bool capitalization_undefined = 4;
  optional .TSS.SpecStringArchive compatibility_font_name = 5;
  optional bool compatibility_font_name_undefined = 6;
  optional .TSS.SpecStringArchive emphasis_marks = 7;
  optional bool emphasis_marks_undefined = 8;
  optional .TSS.SpecBoolArchive bold = 9;
  optional bool bold_undefined = 10;
  optional .TSS.SpecBoolArchive italic = 11;
  optional bool italic_undefined = 12;
  optional .TSS.SpecColorArchive font_color = 13;
  optional bool font_color_undefined = 14;
  optional .TSWP.SpecFontFeaturesArchive font_features = 15;
  optional bool font_features_undefined = 16;
  optional .TSS.SpecStringArchive font_name = 17;
  optional bool font_name_undefined = 18;
  optional .TSS.SpecDoubleArchive font_size = 19;
  optional bool font_size_undefined = 20;
  optional .TSS.SpecDoubleArchive font_size_delta = 21;
  optional bool font_size_delta_undefined = 22;
  optional .TSS.SpecDoubleArchive kerning = 23;
  optional bool kerning_undefined = 24;
  optional .TSS.SpecStringArchive language = 25;
  optional bool language_undefined = 26;
  optional .TSS.SpecIntegerArchive ligatures = 27;
  optional bool ligatures_undefined = 28;
  optional .TSS.SpecDoubleArchive outline = 29;
  optional bool outline_undefined = 30;
  optional .TSS.SpecColorArchive outline_color = 31;
  optional bool outline_color_undefined = 32;
  optional .TSD.SpecShadowArchive text_shadow = 33;
  optional bool text_shadow_undefined = 34;
  optional .TSS.SpecColorArchive strikethru_color = 35;
  optional bool strikethru_color_undefined = 36;
  optional .TSS.SpecIntegerArchive strikethru = 37;
  optional bool strikethru_undefined = 38;
  optional .TSS.SpecDoubleArchive strikethru_width = 39;
  optional bool strikethru_width_undefined = 40;
  optional .TSS.SpecIntegerArchive superscript = 41;
  optional bool superscript_undefined = 42;
  optional .TSS.SpecColorArchive text_background = 43;
  optional bool text_background_undefined = 44;
  optional .TSS.SpecDoubleArchive tracking = 45;
  optional bool tracking_undefined = 46;
  optional .TSS.SpecColorArchive underline_color = 47;
  optional bool underline_color_undefined = 48;
  optional .TSS.SpecIntegerArchive underline = 49;
  optional bool underline_undefined = 50;
  optional .TSS.SpecDoubleArchive underline_width = 51;
  optional bool underline_width_undefined = 52;
  optional .TSS.SpecBoolArchive word_strikethru = 53;
  optional bool word_strikethru_undefined = 54;
  optional .TSS.SpecBoolArchive word_underline = 55;
  optional bool word_underline_undefined = 56;
  optional .TSS.SpecIntegerArchive writing_direction = 57;
  optional bool writing_direction_undefined = 58;
  optional .TSS.SpecBoolArchive is_named_point_size = 59;
  optional bool is_named_point_size_undefined = 60;
  optional .TSS.SpecBoolArchive capitalization_uses_linguistics = 61;
  optional bool capitalization_uses_linguistics_undefined = 62;
}

message ColumnStylePropertyChangeSetArchive {
  optional .TSWP.SpecColumnsArchive columns = 1;
  optional bool columns_undefined = 2;
  optional .TSS.SpecBoolArchive continuous = 3;
  optional bool continuous_undefined = 4;
  optional .TSWP.SpecPaddingArchive margins = 5;
  optional bool margins_undefined = 6;
  optional .TSS.SpecDoubleArchive min_horizontal_inset = 7;
  optional bool min_horizontal_inset_undefined = 8;
  optional .TSWP.SpecPaddingArchive padding = 9;
  optional bool padding_undefined = 10;
  optional .TSS.SpecBoolArchive shrink_to_fit = 11;
  optional bool shrink_to_fit_undefined = 12;
  optional .TSS.SpecIntegerArchive vertical_alignment = 13;
  optional bool vertical_alignment_undefined = 14;
  optional .TSS.SpecBoolArchive vertical_text = 15;
  optional bool vertical_text_undefined = 16;
  optional .TSS.SpecIntegerArchive writing_direction = 17;
  optional bool writing_direction_undefined = 18;
}

message ListStylePropertyChangeSetArchive {
  optional .TSS.SpecColorArchive font_color = 1;
  optional bool font_color_undefined = 2;
  optional .TSS.SpecStringArchive font_name = 3;
  optional bool font_name_undefined = 4;
  optional .TSWP.SpecListStyleFloatArrayArchive list_classic_text_indent_array = 5;
  optional bool list_classic_text_indent_array_undefined = 6;
  optional .TSWP.SpecListStyleListLabelGeometryArrayArchive list_label_geometry_array = 7;
  optional bool list_label_geometry_array_undefined = 8;
  optional .TSWP.SpecListStyleImageDataArrayArchive list_label_image_data_array = 9;
  optional bool list_label_image_data_array_undefined = 10;
  optional .TSWP.SpecListStyleFloatArrayArchive list_label_indent_array = 11;
  optional bool list_label_indent_array_undefined = 12;
  optional .TSWP.SpecListStyleListNumberTypeArrayArchive list_label_number_array = 13;
  optional bool list_label_number_array_undefined = 14;
  optional .TSWP.SpecListStyleBoolArrayArchive list_label_tiered_number_array = 15;
  optional bool list_label_tiered_number_array_undefined = 16;
  optional .TSD.SpecShadowArchive text_shadow = 17;
  optional bool text_shadow_undefined = 18;
  optional .TSWP.SpecListStyleStringArrayArchive list_label_string_array = 19;
  optional bool list_label_string_array_undefined = 20;
  optional .TSWP.SpecListStyleFloatArrayArchive list_text_indent_array = 21;
  optional bool list_text_indent_array_undefined = 22;
  optional .TSWP.SpecListStyleListLabelTypeArrayArchive list_label_type_array = 23;
  optional bool list_label_type_array_undefined = 24;
  optional .TSS.SpecIntegerArchive writing_direction = 25;
  optional bool writing_direction_undefined = 26;
}

message ParagraphSpecificStylePropertyChangeSetArchive {
  optional .TSS.SpecIntegerArchive alignment = 1;
  optional bool alignment_undefined = 2;
  optional .TSS.SpecStringArchive decimal_tab = 3;
  optional bool decimal_tab_undefined = 4;
  optional .TSS.SpecDoubleArchive default_tab_stops = 5;
  optional bool default_tab_stops_undefined = 6;
  optional .TSS.SpecColorArchive fill = 7;
  optional bool fill_undefined = 8;
  optional .TSS.SpecDoubleArchive first_line_indent = 9;
  optional bool first_line_indent_undefined = 10;
  optional .TSWP.SpecParagraphStyleArchive following_paragraph_style = 11;
  optional bool following_paragraph_style_undefined = 12;
  optional .TSS.SpecBoolArchive hyphenate = 13;
  optional bool hyphenate_undefined = 14;
  optional .TSWP.SpecListStyleArchive initial_list_style = 15;
  optional bool initial_list_style_undefined = 16;
  optional .TSS.SpecBoolArchive keep_lines_together = 17;
  optional bool keep_lines_together_undefined = 18;
  optional .TSS.SpecBoolArchive keep_with_next = 19;
  optional bool keep_with_next_undefined = 20;
  optional .TSS.SpecDoubleArchive left_indent = 21;
  optional bool left_indent_undefined = 22;
  optional .TSWP.SpecLineSpacingArchive line_spacing = 23;
  optional bool line_spacing_undefined = 24;
  optional .TSS.SpecIntegerArchive outline_level = 25;
  optional bool outline_level_undefined = 26;
  optional .TSS.SpecIntegerArchive outline_style_type = 27;
  optional bool outline_style_type_undefined = 28;
  optional .TSS.SpecBoolArchive page_break_before = 29;
  optional bool page_break_before_undefined = 30;
  optional .TSS.SpecIntegerArchive paragraph_borders = 31;
  optional bool paragraph_borders_undefined = 32;
  optional .TSWP.SpecRuleOffsetArchive paragraph_rule_offset = 33;
  optional bool paragraph_rule_offset_undefined = 34;
  optional .TSS.SpecDoubleArchive paragraph_rule_width = 35;
  optional bool paragraph_rule_width_undefined = 36;
  optional .TSS.SpecDoubleArchive right_indent = 37;
  optional bool right_indent_undefined = 38;
  optional .TSS.SpecDoubleArchive space_after = 39;
  optional bool space_after_undefined = 40;
  optional .TSS.SpecDoubleArchive space_before = 41;
  optional bool space_before_undefined = 42;
  optional .TSD.SpecStrokeArchive stroke = 43;
  optional bool stroke_undefined = 44;
  optional .TSWP.SpecTabsArchive tabs = 45;
  optional bool tabs_undefined = 46;
  optional .TSS.SpecIntegerArchive widow_control = 47;
  optional bool widow_control_undefined = 48;
  optional .TSS.SpecBoolArchive show_in_bookmarks_list = 49;
  optional bool show_in_bookmarks_list_undefined = 50;
}

message ParagraphStylePropertyChangeSetArchive {
  required .TSWP.CharacterStylePropertyChangeSetArchive super = 1;
  optional .TSS.SpecIntegerArchive alignment = 2;
  optional bool alignment_undefined = 3;
  optional .TSS.SpecStringArchive decimal_tab = 4;
  optional bool decimal_tab_undefined = 5;
  optional .TSS.SpecDoubleArchive default_tab_stops = 6;
  optional bool default_tab_stops_undefined = 7;
  optional .TSS.SpecColorArchive fill = 8;
  optional bool fill_undefined = 9;
  optional .TSS.SpecDoubleArchive first_line_indent = 10;
  optional bool first_line_indent_undefined = 11;
  optional .TSWP.SpecParagraphStyleArchive following_paragraph_style = 12;
  optional bool following_paragraph_style_undefined = 13;
  optional .TSS.SpecBoolArchive hyphenate = 14;
  optional bool hyphenate_undefined = 15;
  optional .TSWP.SpecListStyleArchive initial_list_style = 16;
  optional bool initial_list_style_undefined = 17;
  optional .TSS.SpecBoolArchive keep_lines_together = 18;
  optional bool keep_lines_together_undefined = 19;
  optional .TSS.SpecBoolArchive keep_with_next = 20;
  optional bool keep_with_next_undefined = 21;
  optional .TSS.SpecDoubleArchive left_indent = 22;
  optional bool left_indent_undefined = 23;
  optional .TSWP.SpecLineSpacingArchive line_spacing = 24;
  optional bool line_spacing_undefined = 25;
  optional .TSS.SpecIntegerArchive outline_level = 26;
  optional bool outline_level_undefined = 27;
  optional .TSS.SpecIntegerArchive outline_style_type = 28;
  optional bool outline_style_type_undefined = 29;
  optional .TSS.SpecBoolArchive page_break_before = 30;
  optional bool page_break_before_undefined = 31;
  optional .TSS.SpecIntegerArchive paragraph_borders = 32;
  optional bool paragraph_borders_undefined = 33;
  optional .TSWP.SpecRuleOffsetArchive paragraph_rule_offset = 34;
  optional bool paragraph_rule_offset_undefined = 35;
  optional .TSS.SpecDoubleArchive paragraph_rule_width = 36;
  optional bool paragraph_rule_width_undefined = 37;
  optional .TSS.SpecDoubleArchive right_indent = 38;
  optional bool right_indent_undefined = 39;
  optional .TSS.SpecDoubleArchive space_after = 40;
  optional bool space_after_undefined = 41;
  optional .TSS.SpecDoubleArchive space_before = 42;
  optional bool space_before_undefined = 43;
  optional .TSD.SpecStrokeArchive stroke = 44;
  optional bool stroke_undefined = 45;
  optional .TSWP.SpecTabsArchive tabs = 46;
  optional bool tabs_undefined = 47;
  optional .TSS.SpecIntegerArchive widow_control = 48;
  optional bool widow_control_undefined = 49;
  optional .TSS.SpecBoolArchive show_in_bookmarks_list = 50;
  optional bool show_in_bookmarks_list_undefined = 51;
}

message ShapeStylePropertyChangeSetArchive {
  required .TSD.BaseShapeStylePropertyChangeSetArchive super = 1;
  optional .TSWP.SpecColumnsArchive columns = 2;
  optional bool columns_undefined = 3;
  optional .TSWP.SpecPaddingArchive padding = 4;
  optional bool padding_undefined = 5;
  optional .TSS.SpecBoolArchive shrink_text_to_fit = 6;
  optional bool shrink_text_to_fit_undefined = 7;
  optional .TSS.SpecIntegerArchive vertical_alignment = 8;
  optional bool vertical_alignment_undefined = 9;
  optional .TSS.SpecBoolArchive vertical_text = 10;
  optional bool vertical_text_undefined = 11;
  optional .TSWP.SpecParagraphStyleArchive default_paragraph_style = 12;
  optional bool default_paragraph_style_undefined = 13;
}

message TOCEntryStylePropertyChangeSetArchive {
  required .TSWP.ParagraphStylePropertyChangeSetArchive super = 1;
  optional .TSS.SpecBoolArchive toc_show_page_number = 2;
  optional bool toc_show_page_number_undefined = 3;
  optional .TSWP.SpecCharacterStyleArchive toc_page_number_style = 4;
  optional bool toc_page_number_style_undefined = 5;
}

message StyleDiffArchive {
  optional .TSP.Reference style = 1;
  optional .TSWP.CharacterStylePropertyChangeSetArchive character_change_set = 2;
  optional .TSWP.ParagraphStylePropertyChangeSetArchive paragraph_change_set = 3;
  optional .TSWP.ShapeStylePropertyChangeSetArchive shape_change_set = 4;
}

